Update notebook with feedback

--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This presentation will give the reader an introduction to the topic of distributed deep learning (DDL) and to the issues which need to be taken into consideration when applying this technique. We will also introduce a DDL framework based on [Apache Spark](https://spark.apache.org/) and [Keras](https://keras.io)."
+    "This presentation will give the reader an introduction to the topic of distributed deep learning (DDL) and to the issues which need to be taken into consideration when applying this technique. We will also introduce a DDL framework based on a **fast and general engine for large-scale data processing** called [Apache Spark](https://spark.apache.org/) and the **neural network library** [Keras](https://keras.io)."
    ]
   },
   {
@@ -49,7 +49,7 @@
     "- [Usage](#Distributed-Keras:-a-practicle-example)\n",
     "- [Conclusion](#Conclusion)\n",
     "- [Scaling](#Scaling)\n",
-    "- [Experimental conclusions](#Experimental-conclusions)\n",
+    "- [Experimental observations](#Experimental-observations)\n",
     "- [Summary](#Summary)\n",
     "- [Future work](#Future-work)\n",
     "- [Acknowledgments](#Acknowledgments)"
@@ -65,7 +65,7 @@
     "\n",
     "### Model parallelism<sup><span style=\"font-size: 0.75em\">2</span></sup>\n",
     "\n",
-    "In model parallelism a *single* model is distributed over multiple machines. The performance benefits of distributing a deep network across multiple machines depends on the connectivity structure and computational needs of the model. Models with a large number of parameters typically benefit from access to more CPUs and memory, up to the point where communication costs, i.e., propagation of the weight updates and synchronization mechanisms, dominate [[1]](https://papers.nips.cc/paper/4687-large-scale-distributed-deep-networks.pdf).\n",
+    "In model parallelism a *single* model is distributed over multiple machines. The performance benefits of distributing a deep network across multiple machines depends mainly on the structure and of the model. Models with a large number of parameters typically benefit from access to more CPUs and memory, up to the point where communication costs, i.e., propagation of the weight updates and synchronization mechanisms, dominate [[1]](https://papers.nips.cc/paper/4687-large-scale-distributed-deep-networks.pdf).\n",
     "\n",
     "<img src=\"../resources/model_parallelism.png\" alt=\"Model Parallelism\" width=\"300px\" />\n",
     "\n",
@@ -73,19 +73,19 @@
     "\n",
     "As stated in the introduction, in order to train a large network in a reasonable amount of time, we need to parallize the optimization process (which is the learning of the model). In this settings, we take *several* model replicas, and distribute them over multiple machines. Of course, it would also be possible to combine this with the model parallelism approach. However, for the sake of simplicity, let us assume that a model (or several models) can be contained on a single machine. In order to parallelize the training, and to improve the usage of the resources of the cluster, we distribute the models over several machines.\n",
     "\n",
-    "In order to build a distributed learning scheme using data parallelism, you would in the most simple case need at least 1 **parameter server**. A parameter server is basically a thread (or a collection of threads) which aggregate the incoming gradient updates of the workers into a so-called center variable, which acts as a *global consensus* variable. Finally, the weights which are stored in the center variable will be used by the produced model.\n",
+    "In order to build a distributed learning scheme using data parallelism, you would in the most simple case need at least 1 **parameter server**. A parameter server is basically a thread (or a collection of threads) which aggregate the incoming gradient updates of the workers into a so-called center variable, which acts as a *global consensus* variable. Finally, the weights which are stored in the center variable will eventually be used by the produced model.\n",
     "\n",
     "<img src=\"../resources/data_parallelism.png\" alt=\"Data Parallelism\" width=\"400px\" />\n",
     "\n",
     "There are two general approaches towards solving data parallelism. The most straightforward is a **synchronous** method. In short, a synchronous data parallel method will wait for all workers to finish the current mini-batch or stochastic sample before continuing to the next iteration. Synchronous methods have the advantage that all workers will use the most recent center variable, i.e., a worker knows that all other workers will use the same center variable. However, the main disadvantage of this method is the synchronization itself. A synchronous method will never be truly synchronous. This is due to the many, and possibly different, machines. Furthermore, every machine could have a different workload, which would influence the training speed of a worker. As a result, synchronous methods need additional waiting mechanisms to synchronize all workers. These locking mechanisms will make sure that that all workers compute the next gradient based on the same center variable. However, locking mechanisms induce a significant wait which will significantly influence the training speed. For example, imagine a cluster node with an unusual high load. This high load will, due to CPU sharing, cause the training procedure to slow down. Which in turn, will cause the other workers to wait for this single node. Of course, this is just a simple and possibly extreme example, but this example shows how a single worker could significantly influence the training time of all workers.\n",
     "\n",
-    "<img src=\"../resources/synchronous_method.png\" alt=\"Data Parallelism\" width=\"400px\" />\n",
+    "<img src=\"../resources/synchronous_method.png\" alt=\"Data Parallelism\" width=\"500px\" />\n",
     "\n",
-    "A very simple, but radical \"solution\" for this synchronization problem is to not synchronize the workers :) Workers simply fetch the center variable and update the parameter server with the computed gradient whenever a worker is ready. This approach is called an **asynchronous** data parallel method. Asynchronous methods, compared to synchronous methods, will have a different set of problems. One of these is a so-called **stale gradient**. This a gradient based on an older version of the center variable while the current center variable is a center variable which has already been updated by other workers. One approach to solve this is to induce and exponential decay factor to the gradient updates. However, this would waste computational resources, but of course, one could just get the most recent weights from the parameter server and then start again. However, as we will show later, it is actually stale gradients (result of asynchrony) that induce implicit momentum to the learning process [[2]](https://arxiv.org/pdf/1606.04487v4.pdf).\n",
+    "A very simple, but radical \"solution\" for this synchronization problem is to not synchronize the workers :) Workers simply fetch the center variable and update the parameter server with the computed gradient whenever a worker is ready. This approach is called an **asynchronous** data parallel method. Asynchronous methods, compared to synchronous methods, will have a different set of problems. One of these is a so-called **stale gradient**. This a gradient based on an older version of the center variable while the current center variable is a center variable which has already been updated by other workers. One approach to solve this is to induce and exponential decay factor to the gradient updates. However, this would waste computational resources, but of course, one could just get the most recent weights from the parameter server and then start again. However, as we will show later, it is actually stale gradients (result of asynchrony) that induce *implicit momentum* to the learning process [[2]](https://arxiv.org/pdf/1606.04487v4.pdf).\n",
     "\n",
-    "<img src=\"../resources/asynchronous_method.png\" alt=\"Data Parallelism\" width=\"400px\" />\n",
+    "<img src=\"../resources/asynchronous_method.png\" alt=\"Data Parallelism\" width=\"500px\" />\n",
     "\n",
-    "At this point you probably ask the question: **why does this actually work?** A lot of people suggest this is due to the sparsity of the gradients. Intuitively, image having multiple workers processing different data (since every worker has its own dat partition), chances are the weights updates will be totally dissimilar since we are training a large network (a lot of tunable parameters). Furthermore, techniques such as dropout (if they are applied differently among the replicas) only increase the sparsity updates<sup>3</sup>.\n",
+    "At this point you probably ask the question: **why does this actually work?** A lot of people suggest this is due to the sparsity of the gradients. Intuitively, image having multiple workers processing different data (since every worker has its own dat partition), chances are the weights updates will be totally dissimilar since we are training a large network with a lot of tunable parameters. Furthermore, techniques such as dropout (if they are applied differently among the replicas) only increase the sparsity updates<sup>3</sup>.\n",
     "\n",
     "### Formalization\n",
     "\n",
@@ -173,7 +173,7 @@
     "# Modify these variables according to your needs.\n",
     "application_name = \"Distributed Keras Notebook\"\n",
     "using_spark_2 = False\n",
-    "yarn = \"resource_manager_host:8088\" # Address:port of ResourceManager\n",
+    "yarn = \"p01001532067275.cern.ch:8088\" # Address:port of ResourceManager\n",
     "if not yarn:\n",
     "    # Tell master to use local resources.\n",
     "    master = \"local[*]\"\n",
@@ -1294,9 +1294,9 @@
    "source": [
     "# Plot the training time of the different number of trainers.\n",
     "x_1 = scaling_time_spent.keys()\n",
-    "x_2 = np.arange(1, max_num_workers, 1)\n",
+    "x_2 = np.arange(0, max_num_workers, 1)\n",
     "y_1 = scaling_time_spent.values()\n",
-    "y_2 = np.zeros(max_num_workers - 1)\n",
+    "y_2 = np.zeros(max_num_workers)\n",
     "y_2.fill(time_spent['single_trainer'])\n",
     "for i in range(0, max_num_workers - 1):\n",
     "    y_2[i] /= i\n",
@@ -1315,6 +1315,8 @@
    "metadata": {},
    "source": [
     "### Asynchrony induces momentum (research, not finished)\n",
+    "\n",
+    "**Note:** The following section is subject to research. EASGD derived methods not similar to DOWNPOUR methods, and thus behave different. Furthermore, the theoretical influence of a *communication window* is not very well understood either.\n",
     "\n",
     "As we mentioned in the introduction, for asynchronous methods scaling induces momentum. Meaning, adding more parallel workers adds momentum. This is formalized in the Equation below where $n$ is the number of workers being used, more details are described in [[2]](https://arxiv.org/pdf/1606.04487v4.pdf).\n",
     "\n",
@@ -1472,12 +1474,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Experimental conclusions\n",
+    "## Experimental observations\n",
     "\n",
     "- DOWNPOUR converges well when a small communication window is used $< 5$.\n",
     "- EASGD based methods on the other hand, thrive using large communication windows $> 25$.\n",
     "- Asynchronous methods induce implicit momentum.\n",
-    "- Smaller ($< 64$) minibatch sizes improve EASGD performance, but for the synchronous case this increases synchronization time.\n",
+    "- Smaller ($< 64$) mini-batch sizes improve EASGD performance, but for the synchronous case this increases synchronization time.\n",
     "\n",
     "## Summary\n",
     "\n",
@@ -1485,10 +1487,7 @@
     "\n",
     "Our group is always open on further collaboration on this work, and would like to assist the physics community in their machine learning efforts.\n",
     "\n",
-    "**Contact**:\n",
-    " - [luca.canali@cern.ch](mailto:luca.canali@cern.ch)\n",
-    " - [joeri.hermans@cern.ch](mailto:joeri.hermans@cern.ch)\n",
-    " - [zbigniew.baranowski@cern.ch](mailto:zbigniew.baranowski@cern.ch)\n",
+    "**Contact**: [it-dep-db-sas@cern.ch](mailto:it-dep-db-sas@cern.ch)\n",
     "\n",
     "## Future work\n",
     "\n",
