--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -34,7 +34,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This presentation will give the reader an introduction to the topic of distributed deep learning (DDL) and to the issues which need to be taken into consideration when applying this technique. We will also introduce a DDL framework based on a **fast and general engine for large-scale data processing** called [Apache Spark](https://spark.apache.org/) and the **neural network library** [Keras](https://keras.io)."
+    "This presentation will give the reader an introduction to the topic of distributed deep learning (DDL) and to the issues which need to be taken into consideration when applying this technique. We will also introduce a DDL framework based on a **fast and general engine for large-scale data processing** called [Apache Spark](https://spark.apache.org/) and the **neural network library** [Keras](https://keras.io). \n",
+    "\n",
+    "The project was initially initiated by the CMS experiment. CMS is exploring the possibility to use a deep learning model for the high level trigger in order to be able to handle the data rates for LHC run 3 and up. Furthermore, they would like to be able to train their models faster using distributed algorithms which allows them to tune their models with an increased frequency. An other requirement was those models should be trained on their complete dataset, which is in the order of a TB."
    ]
   },
   {
@@ -173,7 +175,7 @@
     "# Modify these variables according to your needs.\n",
     "application_name = \"Distributed Keras Notebook\"\n",
     "using_spark_2 = False\n",
-    "yarn = \"resource_manager_host:8088\" # Address:port of ResourceManager\n",
+    "yarn = \"p01001532067275.cern.ch:8088\" # Address:port of ResourceManager\n",
     "if not yarn:\n",
     "    # Tell master to use local resources.\n",
     "    master = \"local[*]\"\n",
@@ -1503,7 +1505,7 @@
     "\n",
     "## Acknowledgments\n",
     "\n",
-    "Many thanks to Zbigniew Baranowski and Luca Canali of CERN IT-DB group for collaboration on this work. "
+    "Many thanks to Zbigniew Baranowski and Luca Canali of the IT-DB group, and to Jean-Roch Vlimant, Maurizio Pierini, and Federico Presutti of the EP-UCM group for their collaboration on this work."
    ]
   }
  ],
