Add additional information

--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -112,7 +112,7 @@
     "\n",
     "<img src=\"../resources/distkeras_architecture.png\" alt=\"Model Parallelism\" width=\"500px\" />\n",
     "\n",
-    "### Implemention of costum distributed optimizer\n",
+    "### Implementation of costum distributed optimizer\n",
     "\n",
     "In order to implement your own optimizer you need 2 classes. First, define your optimizer using the *Trainer* interface. We already supplied an *AsynchronousDistributedTrainer*, and an *SynchronousDistributedTrainer*. However, if you require an other procedure, please feel free to do so. Finally, you need a worker class. This class must have a *train* method with the required arguments, as specified by Apache Spark.\n",
     "\n",
@@ -1505,7 +1505,11 @@
     "\n",
     "## Acknowledgments\n",
     "\n",
-    "Many thanks to Zbigniew Baranowski and Luca Canali of the IT-DB group, and to Jean-Roch Vlimant, Maurizio Pierini, and Federico Presutti of the EP-UCM group for their collaboration on this work."
+    "Many thanks to Zbigniew Baranowski and Luca Canali of the IT-DB group, and to Jean-Roch Vlimant, Maurizio Pierini, and Federico Presutti of the EP-UCM group for their collaboration on this work.\n",
+    "\n",
+    "## GitHub repository\n",
+    "\n",
+    "[https://github.com/JoeriHermans/dist-keras/](#https://github.com/JoeriHermans/dist-keras)"
    ]
   }
  ],
