Update notebook to support new API

--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -549,9 +549,9 @@
     "    testSet = testSet.select(\"features_normalized\", \"label_index\", \"label\")\n",
     "    # Apply a prediction from a trained model.\n",
     "    predictor = ModelPredictor(keras_model=trained_model, features_col=\"features_normalized\")\n",
-    "    testSet = predictor.predict(testSet).toDF()\n",
+    "    testSet = predictor.predict(testSet)\n",
     "    # Transform the prediction vector to an indexed label.\n",
-    "    testSet = index_transformer.transform(testSet).toDF()\n",
+    "    testSet = index_transformer.transform(testSet)\n",
     "    # Store the F1 score of the SingleTrainer.\n",
     "    score = evaluator.evaluate(testSet)\n",
     "    \n",
