--- a/examples/data_preprocessing.ipynb
+++ b/examples/data_preprocessing.ipynb
@@ -351,6 +351,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Randomize the dataset.\n",
+    "dataset = shuffle(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {
     "collapsed": false
