Add output of data preprocessing and examples

--- a/examples/analysis.ipynb
+++ b/examples/analysis.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -160,9 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -172,12 +172,12 @@
     "else:\n",
     "    reader = sqlContext\n",
     "# Read the dataset.\n",
-    "raw_dataset = reader.read.parquet(\"data/processed_dataset.parquet\")"
+    "raw_dataset = reader.read.parquet(\"data/processed.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -192,16 +192,6 @@
       " |-- label: vector (nullable = true)\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "250000"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -211,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +236,7 @@
        "DataFrame[features_normalized: vector, label_index: double, label: vector]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -338,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -374,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -385,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -397,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -410,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -419,9 +409,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of testset instances: 75236\n",
-      "Number of trainingset instances: 174764\n",
-      "Total number of instances: 250000\n"
+      "Number of testset instances: 6375000\n",
+      "Number of trainingset instances: 14875000\n",
+      "Total number of instances: 21250000\n"
      ]
     }
    ],
@@ -436,8 +426,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Trainer"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -446,14 +443,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time spent (Asynchronous EASGD): 17.88398814201355 seconds.\n"
+      "Time spent (SingleTrainer): 5416.226797103882 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "time_start = time.time()\n",
+    "single_trainer = SingleTrainer(keras_model=model, loss=loss, worker_optimizer=optimizer, \n",
+    "                               features_col=\"features_normalized\", num_epoch=1, batch_size=64)\n",
+    "trained_model = single_trainer.train(trainingSet)\n",
+    "dt = time.time() - time_start\n",
+    "time_spent['single_trainer'] = dt\n",
+    "\n",
+    "# Note that this time also includes shuffling the data from different places. If you run this\n",
+    "# for the second time (after each other), it will be a lot faster since the data is already\n",
+    "# on the physical machine.\n",
+    "print(\"Time spent (SingleTrainer): \" + `dt` + \" seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 (SingleTrainer): 0.8391199903949982\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = evaluate(trained_model)\n",
+    "results['single_trainer'] = score\n",
+    "\n",
+    "print(\"F1 (SingleTrainer): \" + `score`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Asynchronous EASGD"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time spent (Asynchronous EASGD): 976.0352709293365 seconds.\n"
      ]
     }
    ],
    "source": [
     "time_start = time.time()\n",
     "async_easgd_trainer = AsynchronousEASGD(keras_model=model, features_col=\"features_normalized\",\n",
-    "                                        batch_size=10, num_workers=num_workers, rho=5.0, learning_rate=0.05,\n",
+    "                                        batch_size=10, num_workers=num_workers, rho=5.0, learning_rate=0.04,\n",
     "                                        worker_optimizer=optimizer, loss=loss, communication_window=30)\n",
     "trained_model = async_easgd_trainer.train(trainingSet)\n",
     "dt = time.time() - time_start\n",
@@ -464,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -473,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F1 (EASGD): 0.8023815453380814\n"
+      "F1 (EASGD): 0.8324477473788667\n"
      ]
     }
    ],
@@ -482,6 +537,15 @@
     "results['easgd_trainer'] = score\n",
     "\n",
     "print(\"F1 (EASGD): \" + `score`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "For the results we observe that the statistical performance of asynchronous EASGD lays within the 1% error of the single worker training while being 550% faster."
    ]
   }
  ],
