Fix typo in model serving pipeline

--- a/examples/kafka_spark_high_throughput_ml_pipeline.ipynb
+++ b/examples/kafka_spark_high_throughput_ml_pipeline.ipynb
@@ -261,7 +261,7 @@
     "    num_executors = 8\n",
     "    num_cores = 2\n",
     "# Define Kafka specific metrics.\n",
-    "zk = \"haperf103:2181\";                  # ZooKeeper address\n",
+    "zk = \"zookeeper_host:2181\";             # ZooKeeper address\n",
     "topic = \"Machine_Learning\"              # Topic name\n",
     "consumer_name = \"dist-keras-consumer\"   # Consumer identifier\n",
     "# Define Spark streaming specific parameters.\n",
