--- a/examples/kafka_spark_high_throughput_ml_pipeline.ipynb
+++ b/examples/kafka_spark_high_throughput_ml_pipeline.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we will inform the reader how to set up a production ready machine learning pipeline using [Apache Kafka](https://kafka.apache.org) and [Apache Spark](https://spark.apache.org), together with our Distributed Deep Learning framework [Distributed Keras](https://github.com/JoeriHermans/dist-keras) which is built with [Keras](https://keras.io).\n",
+    "In this notebook we will inform the reader how to set up a production ready machine learning pipeline using [Apache Kafka](https://kafka.apache.org) and [Apache Spark](https://spark.apache.org), together with our Distributed Deep Learning framework [Distributed Keras](https://github.com/JoeriHermans/dist-keras) which is built using [Keras](https://keras.io).\n",
     "\n",
     "***Note before starting this notebook: *** Do not forget to run the Kafka producer (as explained in this notebook)."
    ]
