Add feature normalization to CIFAR-10 preprocessing

--- a/examples/cifar-10-preprocessing.ipynb
+++ b/examples/cifar-10-preprocessing.ipynb
@@ -77,16 +77,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2017-01-26 15:07:18--  https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+      "--2017-01-26 15:42:04--  https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
       "Resolving www.cs.toronto.edu... 128.100.3.30\n",
       "Connecting to www.cs.toronto.edu|128.100.3.30|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 170498071 (163M) [application/x-gzip]\n",
       "Saving to: “cifar-10-python.tar.gz”\n",
       "\n",
-      "100%[======================================>] 170,498,071 5.50M/s   in 28s     \n",
+      "100%[======================================>] 170,498,071 4.88M/s   in 33s     \n",
       "\n",
-      "2017-01-26 15:07:49 (5.77 MB/s) - “cifar-10-python.tar.gz” saved [170498071/170498071]\n",
+      "2017-01-26 15:42:40 (4.89 MB/s) - “cifar-10-python.tar.gz” saved [170498071/170498071]\n",
       "\n"
      ]
     }
@@ -555,12 +555,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Finally, normalize the pixel intensities with the range [0, 1]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Allocate a MinMaxTransformer.\n",
+    "transformer = MinMaxTransformer(n_min=0.0, n_max=1.0, \\\n",
+    "                                o_min=0.0, o_max=250.0, \\\n",
+    "                                input_col=\"features\", \\\n",
+    "                                output_col=\"features_normalized\")\n",
+    "# Transform the datasets.\n",
+    "dataset_train = transformer.transform(dataset_train)\n",
+    "dataset_test = transformer.transform(dataset_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Saving the datasets to Parquet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -582,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
