--- a/examples/workflow.ipynb
+++ b/examples/workflow.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11 December 2016\r\n"
+      "06 April 2017\r\n"
      ]
     }
    ],
@@ -266,9 +266,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -279,12 +279,12 @@
     "    reader = sqlContext\n",
     "# Read the dataset.\n",
     "raw_dataset = reader.read.format('com.databricks.spark.csv') \\\n",
-    "                    .options(header='true', inferSchema='true').load(\"data/small_atlas_higgs.csv\")"
+    "                    .options(header='true', inferSchema='true').load(\"data/atlas_higgs.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -360,7 +360,7 @@
        "[Row(features=DenseVector([138.47, 51.655, 97.827, 27.98, 0.91, 124.711, 2.666, 3.064, 41.928, 197.76, 1.582, 1.396, 0.2, 32.638, 1.017, 0.381, 51.626, 2.273, -2.414, 16.824, -0.277, 258.733, 2.0, 67.435, 2.15, 0.444, 46.062, 1.24, -2.475, 113.497]))]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +415,7 @@
        " Row(Label=u'b', label_index=0.0)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -446,23 +446,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Row(label_index=1.0, label=DenseVector([0.0, 1.0]))]"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We observe that Keras is not able to work with these indexes.\n",
     "# What it actually expects is a vector with an identical size to the output layer.\n",
@@ -496,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -512,22 +501,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DataFrame[features_normalized: vector, label_index: double, label: vector]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Finally, we create a trainingset and a testset.\n",
     "(training_set, test_set) = dataset.randomSplit([0.6, 0.4])\n",
@@ -546,37 +524,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "____________________________________________________________________________________________________\n",
-      "Layer (type)                     Output Shape          Param #     Connected to                     \n",
-      "====================================================================================================\n",
-      "dense_1 (Dense)                  (None, 500)           15500       dense_input_1[0][0]              \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_1 (Activation)        (None, 500)           0           dense_1[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dropout_1 (Dropout)              (None, 500)           0           activation_1[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (None, 500)           250500      dropout_1[0][0]                  \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_2 (Activation)        (None, 500)           0           dense_2[0][0]                    \n",
-      "____________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                  (None, 2)             1002        activation_2[0][0]               \n",
-      "____________________________________________________________________________________________________\n",
-      "activation_3 (Activation)        (None, 2)             0           dense_3[0][0]                    \n",
-      "====================================================================================================\n",
-      "Total params: 267002\n",
-      "____________________________________________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = Sequential()\n",
     "model.add(Dense(500, input_shape=(nb_features,)))\n",
@@ -601,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -633,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -661,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -689,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -714,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -728,21 +680,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainer: single\n",
-      " - Accuracy: 0.827918158874\n",
-      " - Training time: 123.642620087\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch the evaluation metrics.\n",
     "accuracy = evaluate_accuracy(trained_model)\n",
@@ -769,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -784,21 +726,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainer: aeasgd\n",
-      " - Accuracy: 0.801322785631\n",
-      " - Training time: 13.513240099\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch the evaluation metrics.\n",
     "accuracy = evaluate_accuracy(trained_model)\n",
@@ -823,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -838,21 +770,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainer: eamsgd\n",
-      " - Accuracy: 0.782817752861\n",
-      " - Training time: 22.8691320419\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch the evaluation metrics.\n",
     "accuracy = evaluate_accuracy(trained_model)\n",
@@ -870,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -885,21 +807,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Trainer: downpour\n",
-      " - Accuracy: 0.820047285097\n",
-      " - Training time: 20.6864740849\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fetch the evaluation metrics.\n",
     "accuracy = evaluate_accuracy(trained_model)\n",
@@ -953,9 +865,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda root]",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "conda-root-py"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -967,7 +879,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
